--- a/.hintrc
+++ b/.hintrc
@@ -1,13 +1,19 @@
 {
-    "extends": [
-      "development"
+  "extends": [
+    "development"
+  ],
+  "hints": {
+    "axe/forms": [
+      "default",
+      {
+        "label": "off"
+      }
     ],
-    "hints": {
-      "axe/forms": [
-        "default",
-        {
-          "label": "off"
-        }
-      ]
-    }
+    "axe/structure": [
+      "default",
+      {
+        "list": "off"
+      }
+    ]
   }
+}
